@@ -9,6 +9,10 @@ documents those changes that are of interest to users and admins.
     transmit.
  -- Change job_state in job structure to dedicate 8-bits to state flags. 
  -- BLUEGENE - sinfo and sview now display correct cpu counts for partitions
+ -- cleaned up the cons_res plugin.  It now uses a ptr to a part_record
+    instead of having to do strcmp's to find the correct one.
+ -- pushed most all the plugin specific info in src/common/node_select.c 
+    into the respected plugin.
 
 * Changes in SLURM 2.0.1
 ========================
